--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,8 @@ jobs:
 
   deploy-pypi:
     runs-on: ubuntu-latest
-    needs: [build-linux, build-windows, build-macos]
+#    needs: [build-linux, build-windows, build-macos]
+    needs: [build-linux, build-macos]
     if: github.ref == 'refs/heads/master' # We only deploy on master commits
 
     steps:
@@ -62,10 +63,10 @@ jobs:
           name: linux-wheel
           path: dist
 
-      - uses: actions/download-artifact@master
-        with:
-          name: windows-wheel
-          path: dist
+#      - uses: actions/download-artifact@master
+#        with:
+#          name: windows-wheel
+#          path: dist
 
       - uses: actions/download-artifact@master
         with:
@@ -74,7 +75,9 @@ jobs:
 
       - run: ls dist
 
-      # - name: Upload to PyPI
-      #   uses: pypa/gh-action-pypi-publish@master
-      #   with:
-      #     password: ${{ secrets.PYPI_API_TOKEN }}
+      - name: Upload to TestPyPI
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: __token__
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          repository_url: https://test.pypi.org/legacy/
