--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,20 +19,20 @@ jobs:
           path: dist
 
 
-  build-windows:
-    runs-on: windows-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Build wheel
-        run: python3 setup.py bdist_wheel
-
-      - uses: actions/upload-artifact@master
-        with:
-          name: windows-wheel
-          path: dist
+#  build-windows:
+#    runs-on: windows-latest
+#
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#
+#      - name: Build wheel
+#        run: python3 setup.py bdist_wheel
+#
+#      - uses: actions/upload-artifact@master
+#        with:
+#          name: windows-wheel
+#          path: dist
 
 
   build-macos:
