--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
 #    needs: [build-linux, build-windows, build-macos]
     needs: [build-linux, build-macos]
-    if: github.ref == 'refs/heads/master' # We only deploy on master commits
+    if: github.ref == 'refs/heads/main' # We only deploy on master commits
 
     steps:
       - uses: actions/download-artifact@master
