--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,49 +40,49 @@ jobs:
 #          path: dist
 
 
-#  build-macos:
-#    runs-on: macos-latest
-#
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#
-#      - name: Build wheel
-#        run: python3 setup.py bdist_wheel
-#
-#      - uses: actions/upload-artifact@master
-#        with:
-#          name: macos-wheel
-#          path: dist
+  build-macos:
+    runs-on: macos-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Build wheel
+        run: python3 setup.py bdist_wheel
+
+      - uses: actions/upload-artifact@master
+        with:
+          name: macos-wheel
+          path: dist
 
 
-#  deploy-pypi:
-#    runs-on: ubuntu-latest
-##    needs: [build-linux, build-windows, build-macos]
-#    needs: [build-linux, build-macos]
-#    if: github.ref == 'refs/heads/main' # We only deploy on master commits
-#
-#    steps:
+  deploy-pypi:
+    runs-on: ubuntu-latest
+#    needs: [build-linux, build-windows, build-macos]
+    needs: [build-linux, build-macos]
+      #    if: github.ref == 'refs/heads/main' # We only deploy on master commits
+
+    steps:
+      - uses: actions/download-artifact@master
+        with:
+          name: linux-wheel
+          path: dist
+
 #      - uses: actions/download-artifact@master
 #        with:
-#          name: linux-wheel
+#          name: windows-wheel
 #          path: dist
-#
-##      - uses: actions/download-artifact@master
-##        with:
-##          name: windows-wheel
-##          path: dist
-#
-#      - uses: actions/download-artifact@master
-#        with:
-#          name: macos-wheel
-#          path: dist
-#
-#      - run: ls dist
-#
-#      - name: Upload to TestPyPI
-#        uses: pypa/gh-action-pypi-publish@master
-#        with:
-#          user: __token__
-#          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-#          repository_url: https://test.pypi.org/legacy/
+
+      - uses: actions/download-artifact@master
+        with:
+          name: macos-wheel
+          path: dist
+
+      - run: ls dist
+
+      - name: Upload to TestPyPI
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: __token__
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          repository_url: https://test.pypi.org/legacy/
