--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/upload-artifact@master
         with:
           name: linux-wheel
-          path: dist
+          path: dist/*-manylinux*.whl
 
 
 #  build-windows:
@@ -40,26 +40,27 @@ jobs:
 #          path: dist
 
 
-  build-macos:
-    runs-on: macos-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Build wheel
-        run: python3 setup.py bdist_wheel
-
-      - uses: actions/upload-artifact@master
-        with:
-          name: macos-wheel
-          path: dist
+#  build-macos:
+#    runs-on: macos-latest
+#
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#
+#      - name: Build wheel
+#        run: python3 setup.py bdist_wheel
+#
+#      - uses: actions/upload-artifact@master
+#        with:
+#          name: macos-wheel
+#          path: dist
 
 
   deploy-pypi:
     runs-on: ubuntu-latest
 #    needs: [build-linux, build-windows, build-macos]
-    needs: [build-linux, build-macos]
+#    needs: [build-linux, build-macos]
+    needs: [build-linux]
       #    if: github.ref == 'refs/heads/main' # We only deploy on master commits
 
     steps:
@@ -73,10 +74,10 @@ jobs:
 #          name: windows-wheel
 #          path: dist
 
-      - uses: actions/download-artifact@master
-        with:
-          name: macos-wheel
-          path: dist
+#      - uses: actions/download-artifact@master
+#        with:
+#          name: macos-wheel
+#          path: dist
 
       - run: ls dist
 
