--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-#      - name: Build wheel
-#        run: python3 setup.py bdist_wheel
-      
       - name: Build manylinux Python wheels
         uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_x86_64
         with:
@@ -40,27 +37,26 @@ jobs:
 #          path: dist
 
 
-#  build-macos:
-#    runs-on: macos-latest
-#
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#
-#      - name: Build wheel
-#        run: python3 setup.py bdist_wheel
-#
-#      - uses: actions/upload-artifact@master
-#        with:
-#          name: macos-wheel
-#          path: dist
+  build-macos:
+    runs-on: macos-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Build wheel
+        run: python3 setup.py bdist_wheel
+
+      - uses: actions/upload-artifact@master
+        with:
+          name: macos-wheel
+          path: dist
 
 
   deploy-pypi:
     runs-on: ubuntu-latest
 #    needs: [build-linux, build-windows, build-macos]
-#    needs: [build-linux, build-macos]
-    needs: [build-linux]
+    needs: [build-linux, build-macos]
       #    if: github.ref == 'refs/heads/main' # We only deploy on master commits
 
     steps:
@@ -74,10 +70,10 @@ jobs:
 #          name: windows-wheel
 #          path: dist
 
-#      - uses: actions/download-artifact@master
-#        with:
-#          name: macos-wheel
-#          path: dist
+      - uses: actions/download-artifact@master
+        with:
+          name: macos-wheel
+          path: dist
 
       - run: ls dist
 
