switch on windows wheel

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,38 +3,38 @@ name: Deploy
 on: push
 
 jobs:
-  build-linux:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Build manylinux Python wheels
-        uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_x86_64
-        with:
-          python-versions: 'cp36-cp36m cp37-cp37m'
-
-      - uses: actions/upload-artifact@master
-        with:
-          name: linux-wheel
-          path: dist/*-manylinux*.whl
-
-
-#  build-windows:
-#    runs-on: windows-latest
+#  build-linux:
+#    runs-on: ubuntu-latest
 #
 #    steps:
 #      - name: Checkout
 #        uses: actions/checkout@v2
 #
-#      - name: Build wheel
-#        run: python3 setup.py bdist_wheel
+#      - name: Build manylinux Python wheels
+#        uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_x86_64
+#        with:
+#          python-versions: 'cp36-cp36m cp37-cp37m'
 #
 #      - uses: actions/upload-artifact@master
 #        with:
-#          name: windows-wheel
-#          path: dist
+#          name: linux-wheel
+#          path: dist/*-manylinux*.whl
+
+
+  build-windows:
+    runs-on: windows-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Build wheel
+        run: python3 setup.py bdist_wheel
+
+      - uses: actions/upload-artifact@master
+        with:
+          name: windows-wheel
+          path: dist
 
 
   build-macos:
