--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install wheel
         run: pip install wheel
 
+      - name: Install patch
+        run: pip install patch
+
       - name: Build wheel
         run: python3 setup.py bdist_wheel
 
