--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,9 @@ jobs:
         run: pip install patch
 
       - name: Build wheel
-        run: python3 setup.py bdist_wheel
+        run: |
+          call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvarsall.bat" %ARCH% 
+          python3 setup.py bdist_wheel
 
       - uses: actions/upload-artifact@master
         with:
@@ -59,33 +61,33 @@ jobs:
 #          path: dist
 
 
-  deploy-pypi:
-    runs-on: ubuntu-latest
-#    needs: [build-linux, build-windows, build-macos]
-    needs: [build-windows]
-      #    if: github.ref == 'refs/heads/main' # We only deploy on master commits
-
-    steps:
+#  deploy-pypi:
+#    runs-on: ubuntu-latest
+##    needs: [build-linux, build-windows, build-macos]
+#    needs: [build-windows]
+#      #    if: github.ref == 'refs/heads/main' # We only deploy on master commits
+#
+#    steps:
+##      - uses: actions/download-artifact@master
+##        with:
+##          name: linux-wheel
+##          path: dist
+#
 #      - uses: actions/download-artifact@master
 #        with:
-#          name: linux-wheel
+#          name: windows-wheel
 #          path: dist
-
-      - uses: actions/download-artifact@master
-        with:
-          name: windows-wheel
-          path: dist
-
-#      - uses: actions/download-artifact@master
+#
+##      - uses: actions/download-artifact@master
+##        with:
+##          name: macos-wheel
+##          path: dist
+#
+#      - run: ls dist
+#
+#      - name: Upload to TestPyPI
+#        uses: pypa/gh-action-pypi-publish@master
 #        with:
-#          name: macos-wheel
-#          path: dist
-
-      - run: ls dist
-
-      - name: Upload to TestPyPI
-        uses: pypa/gh-action-pypi-publish@master
-        with:
-          user: __token__
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          repository_url: https://test.pypi.org/legacy/
+#          user: __token__
+#          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+#          repository_url: https://test.pypi.org/legacy/
