--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,8 @@ jobs:
   build-windows:
     runs-on: windows-latest
 
+    shell: cmd
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
