--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,20 +21,34 @@ jobs:
           path: dist/*-manylinux*.whl
 
 
-#  build-windows:
-#    runs-on: windows-latest
-#
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#
-#      - name: Build wheel
-#        run: python3 setup.py bdist_wheel
-#
-#      - uses: actions/upload-artifact@master
-#        with:
-#          name: windows-wheel
-#          path: dist
+  build-windows:
+    runs-on: windows-latest
+    env:
+      ARCH: "x64"
+      CC: cl
+      CXX: cl
+
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install wheel
+        run: pip install wheel
+
+      - name: Install patch
+        run: pip install patch
+
+      - name: Build wheel
+        shell: cmd
+        run: |
+          call "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC\\Auxiliary\\Build\\vcvarsall.bat" %ARCH%
+          python3 setup.py bdist_wheel
+
+      - uses: actions/upload-artifact@master
+        with:
+          name: windows-wheel
+          path: dist
 
 
   build-macos:
@@ -53,33 +67,32 @@ jobs:
           path: dist
 
 
-#  deploy-pypi:
-#    runs-on: ubuntu-latest
-##    needs: [build-linux, build-windows, build-macos]
-#    needs: [build-linux, build-macos]
-#      #    if: github.ref == 'refs/heads/main' # We only deploy on master commits
-#
-#    steps:
-#      - uses: actions/download-artifact@master
-#        with:
-#          name: linux-wheel
-#          path: dist
-#
-##      - uses: actions/download-artifact@master
-##        with:
-##          name: windows-wheel
-##          path: dist
-#
-#      - uses: actions/download-artifact@master
-#        with:
-#          name: macos-wheel
-#          path: dist
-#
-#      - run: ls dist
-#
-#      - name: Upload to TestPyPI
-#        uses: pypa/gh-action-pypi-publish@master
-#        with:
-#          user: __token__
-#          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-#          repository_url: https://test.pypi.org/legacy/
+  deploy-pypi:
+    runs-on: ubuntu-latest
+    needs: [build-linux, build-windows, build-macos]
+      #    if: github.ref == 'refs/heads/main' # We only deploy on master commits
+
+    steps:
+      - uses: actions/download-artifact@master
+        with:
+          name: linux-wheel
+          path: dist
+
+      - uses: actions/download-artifact@master
+        with:
+          name: windows-wheel
+          path: dist
+
+      - uses: actions/download-artifact@master
+        with:
+          name: macos-wheel
+          path: dist
+
+      - run: ls dist
+
+      - name: Upload to TestPyPI
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: __token__
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          repository_url: https://test.pypi.org/legacy/
