--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,7 @@ jobs:
   deploy-pypi:
     runs-on: ubuntu-latest
     needs: [build-linux, build-windows, build-macos]
-      #    if: github.ref == 'refs/heads/main' # We only deploy on master commits
+          if: github.ref == 'refs/heads/main' # We only deploy on master commits
 
     steps:
       - uses: actions/download-artifact@master
@@ -94,5 +94,4 @@ jobs:
         uses: pypa/gh-action-pypi-publish@master
         with:
           user: __token__
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          repository_url: https://test.pypi.org/legacy/
+          password: ${{ secrets.PYPI_API_TOKEN }}
