--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,49 +3,49 @@ name: Deploy
 on: push
 
 jobs:
-  build-linux:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Build manylinux Python wheels
-        uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_x86_64
-        with:
-          python-versions: 'cp36-cp36m cp37-cp37m'
-
-      - uses: actions/upload-artifact@master
-        with:
-          name: linux-wheel
-          path: dist/*-manylinux*.whl
-
-
-  build-windows:
-    runs-on: windows-latest
-    env:
-      ARCH: "x64"
-      CC: cl
-      CXX: cl
-
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Install wheel
-        run: pip install wheel
-
-      - name: Build wheel
-        shell: cmd
-        run: |
-          call "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC\\Auxiliary\\Build\\vcvarsall.bat" %ARCH%
-          python3 setup.py bdist_wheel
-
-      - uses: actions/upload-artifact@master
-        with:
-          name: windows-wheel
-          path: dist
+#  build-linux:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#
+#      - name: Build manylinux Python wheels
+#        uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_x86_64
+#        with:
+#          python-versions: 'cp36-cp36m cp37-cp37m'
+#
+#      - uses: actions/upload-artifact@master
+#        with:
+#          name: linux-wheel
+#          path: dist/*-manylinux*.whl
+#
+#
+#  build-windows:
+#    runs-on: windows-latest
+#    env:
+#      ARCH: "x64"
+#      CC: cl
+#      CXX: cl
+#
+#
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#
+#      - name: Install wheel
+#        run: pip install wheel
+#
+#      - name: Build wheel
+#        shell: cmd
+#        run: |
+#          call "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC\\Auxiliary\\Build\\vcvarsall.bat" %ARCH%
+#          python3 setup.py bdist_wheel
+#
+#      - uses: actions/upload-artifact@master
+#        with:
+#          name: windows-wheel
+#          path: dist
 
 
   build-macos:
@@ -54,6 +54,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.8
 
       - name: Build wheel
         run: python3 setup.py bdist_wheel
@@ -64,31 +69,31 @@ jobs:
           path: dist
 
 
-  deploy-pypi:
-    runs-on: ubuntu-latest
-    needs: [build-linux, build-windows, build-macos]
-    if: github.ref == 'refs/heads/main' # We only deploy on master commits
-
-    steps:
-      - uses: actions/download-artifact@master
-        with:
-          name: linux-wheel
-          path: dist
-
-      - uses: actions/download-artifact@master
-        with:
-          name: windows-wheel
-          path: dist
-
-      - uses: actions/download-artifact@master
-        with:
-          name: macos-wheel
-          path: dist
-
-      - run: ls dist
-
-      - name: Upload to PyPI
-        uses: pypa/gh-action-pypi-publish@master
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+#  deploy-pypi:
+#    runs-on: ubuntu-latest
+#    needs: [build-linux, build-windows, build-macos]
+#    if: github.ref == 'refs/heads/main' # We only deploy on master commits
+#
+#    steps:
+#      - uses: actions/download-artifact@master
+#        with:
+#          name: linux-wheel
+#          path: dist
+#
+#      - uses: actions/download-artifact@master
+#        with:
+#          name: windows-wheel
+#          path: dist
+#
+#      - uses: actions/download-artifact@master
+#        with:
+#          name: macos-wheel
+#          path: dist
+#
+#      - run: ls dist
+#
+#      - name: Upload to PyPI
+#        uses: pypa/gh-action-pypi-publish@master
+#        with:
+#          user: __token__
+#          password: ${{ secrets.PYPI_API_TOKEN }}
