--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,16 +49,11 @@ jobs:
 
 
   build-macos:
-    runs-on: macos-latest
+    runs-on: macos-10.15
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.8
 
       - name: Build wheel
         run: python3 setup.py bdist_wheel
