--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,35 +19,8 @@ jobs:
         with:
           name: linux-wheel
           path: dist/*-manylinux*.whl
-#
-#
-#  build-windows:
-#    runs-on: windows-latest
-#    env:
-#      ARCH: "x64"
-#      CC: cl
-#      CXX: cl
-#
-#
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#
-#      - name: Install wheel
-#        run: pip install wheel
-#
-#      - name: Build wheel
-#        shell: cmd
-#        run: |
-#          call "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC\\Auxiliary\\Build\\vcvarsall.bat" %ARCH%
-#          python3 setup.py bdist_wheel
-#
-#      - uses: actions/upload-artifact@master
-#        with:
-#          name: windows-wheel
-#          path: dist
 
-  build_wheels:
+  build-win-and-mac:
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -71,52 +44,30 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          path: ./dist/*.whl
-#      - uses: actions/upload-artifact@v3
-#        with:
-#          path: ./wheelhouse/*.whl
-
-#  build-macos:
-#    runs-on: macos-11
-#
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#
-#      - name: Build wheel
-#        run: python3 setup.py bdist_wheel
-#
-#      - uses: actions/upload-artifact@master
-#        with:
-#          name: macos-wheel
-#          path: dist
+          name: windows-mac-wheels
+          path: dist/*.whl
 
 
-#  deploy-pypi:
-#    runs-on: ubuntu-latest
-#    needs: [build-linux, build-windows, build-macos]
-#    if: github.ref == 'refs/heads/main' # We only deploy on master commits
-#
-#    steps:
-#      - uses: actions/download-artifact@master
-#        with:
-#          name: linux-wheel
-#          path: dist
-#
-#      - uses: actions/download-artifact@master
-#        with:
-#          name: windows-wheel
-#          path: dist
-#
-#      - uses: actions/download-artifact@master
-#        with:
-#          name: macos-wheel
-#          path: dist
-#
-#      - run: ls dist
-#
-#      - name: Upload to PyPI
-#        uses: pypa/gh-action-pypi-publish@master
-#        with:
-#          user: __token__
-#          password: ${{ secrets.PYPI_API_TOKEN }}
+  deploy-pypi:
+    runs-on: ubuntu-latest
+    needs: [build-linux, build-win-and-mac]
+    if: github.ref == 'refs/heads/main' # We only deploy on master commits
+
+    steps:
+      - uses: actions/download-artifact@master
+        with:
+          name: linux-wheel
+          path: dist
+
+      - uses: actions/download-artifact@master
+        with:
+          name: windows-mac-wheels
+          path: dist
+
+      - run: ls dist
+
+      - name: Upload to PyPI
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
