--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,53 +20,37 @@ jobs:
           name: linux-wheel
           path: dist/*-manylinux*.whl
 
-
-  build-windows:
-    runs-on: windows-latest
-    env:
-      ARCH: "x64"
-      CC: cl
-      CXX: cl
-
+  build-win-and-mac:
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macOS-11, windows-2022]
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Install wheel
-        run: pip install wheel
+      # Used to host cibuildwheel
+      - uses: actions/setup-python@v3
 
-      - name: Build wheel
-        shell: cmd
-        run: |
-          call "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC\\Auxiliary\\Build\\vcvarsall.bat" %ARCH%
-          python3 setup.py bdist_wheel
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.11.2
 
-      - uses: actions/upload-artifact@master
+      - name: Build wheels
+        run: python -m cibuildwheel --output-dir dist
+        # to supply options, put them in 'env', like:
+        # env:
+        #   CIBW_SOME_OPTION: value
+
+      - uses: actions/upload-artifact@v3
         with:
-          name: windows-wheel
-          path: dist
-
-
-  build-macos:
-    runs-on: macos-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Build wheel
-        run: python3 setup.py bdist_wheel
-
-      - uses: actions/upload-artifact@master
-        with:
-          name: macos-wheel
-          path: dist
+          name: windows-mac-wheels
+          path: dist/*.whl
 
 
   deploy-pypi:
     runs-on: ubuntu-latest
-    needs: [build-linux, build-windows, build-macos]
+    needs: [build-linux, build-win-and-mac]
     if: github.ref == 'refs/heads/main' # We only deploy on master commits
 
     steps:
@@ -77,12 +61,7 @@ jobs:
 
       - uses: actions/download-artifact@master
         with:
-          name: windows-wheel
-          path: dist
-
-      - uses: actions/download-artifact@master
-        with:
-          name: macos-wheel
+          name: windows-mac-wheels
           path: dist
 
       - run: ls dist
