--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,32 +3,63 @@ name: Deploy
 on: push
 
 jobs:
-  build-linux:
-    runs-on: ubuntu-latest
+#  build-linux:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#
+#      - name: Build manylinux Python wheels
+#        uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_x86_64
+#        with:
+#          python-versions: 'cp36-cp36m cp37-cp37m'
+#
+#      - uses: actions/upload-artifact@master
+#        with:
+#          name: linux-wheel
+#          path: dist/*-manylinux*.whl
+#
+#  build-win-and-mac:
+#    name: Build wheels on ${{ matrix.os }}
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      matrix:
+#        os: [macOS-11, windows-2022]
+#
+#    steps:
+#      - uses: actions/checkout@v3
+#
+#      # Used to host cibuildwheel
+#      - uses: actions/setup-python@v3
+#
+#      - name: Install cibuildwheel
+#        run: python -m pip install cibuildwheel==2.11.2
+#
+#      - name: Build wheels
+#        run: python -m cibuildwheel --output-dir dist
+#        # to supply options, put them in 'env', like:
+#        # env:
+#        #   CIBW_SOME_OPTION: value
+#
+#      - uses: actions/upload-artifact@v3
+#        with:
+#          name: windows-mac-wheels
+#          path: dist/*.whl
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Build manylinux Python wheels
-        uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_x86_64
-        with:
-          python-versions: 'cp36-cp36m cp37-cp37m'
-
-      - uses: actions/upload-artifact@master
-        with:
-          name: linux-wheel
-          path: dist/*-manylinux*.whl
-
-  build-win-and-mac:
+  build-windows:
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-11, windows-2022]
+        os: [windows-2022]
+    env:
+      CC: cl
+      CXX: cl
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Clone UP Fast Downward repository
+        uses: actions/checkout@v3
 
       # Used to host cibuildwheel
       - uses: actions/setup-python@v3
@@ -44,30 +75,30 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          name: windows-mac-wheels
+          name: windows-wheels
           path: dist/*.whl
 
 
-  deploy-pypi:
-    runs-on: ubuntu-latest
-    needs: [build-linux, build-win-and-mac]
-    if: github.ref == 'refs/heads/main' # We only deploy on master commits
-
-    steps:
-      - uses: actions/download-artifact@master
-        with:
-          name: linux-wheel
-          path: dist
-
-      - uses: actions/download-artifact@master
-        with:
-          name: windows-mac-wheels
-          path: dist
-
-      - run: ls dist
-
-      - name: Upload to PyPI
-        uses: pypa/gh-action-pypi-publish@master
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+#  deploy-pypi:
+#    runs-on: ubuntu-latest
+#    needs: [build-linux, build-win-and-mac]
+#    if: github.ref == 'refs/heads/main' # We only deploy on master commits
+#
+#    steps:
+#      - uses: actions/download-artifact@master
+#        with:
+#          name: linux-wheel
+#          path: dist
+#
+#      - uses: actions/download-artifact@master
+#        with:
+#          name: windows-mac-wheels
+#          path: dist
+#
+#      - run: ls dist
+#
+#      - name: Upload to PyPI
+#        uses: pypa/gh-action-pypi-publish@master
+#        with:
+#          user: __token__
+#          password: ${{ secrets.PYPI_API_TOKEN }}
