--- a/.github/workflows/test-ubuntu.yml
+++ b/.github/workflows/test-ubuntu.yml
@@ -13,6 +13,8 @@ jobs:
           - {ubuntu: ubuntu-20.04, python: '3.8'}
           - {ubuntu: ubuntu-22.04, python: '3.10'}
     steps:
+      - name: Clone repository
+        uses: actions/checkout@v3
 
       - name: Install Python
         uses: actions/setup-python@v4
