--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,7 @@ jobs:
     env:
       CC: cl
       CXX: cl
+      CIBW_BUILD_VERBOSITY: 3
 
     steps:
       - name: Clone UP Fast Downward repository
