--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,11 +68,25 @@ jobs:
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.15.0
 
-      - name: Build wheels
+      - uses: ilammy/msvc-dev-cmd@v1
+
+      - name: Build 64-bit wheel
         run: python -m cibuildwheel --output-dir dist
-        # to supply options, put them in 'env', like:
-        # env:
-        #   CIBW_SOME_OPTION: value
+        env:
+          CIBW_BUILD: cp27-win_amd64
+          DISTUTILS_USE_SDK: 1
+          MSSdk: 1
+
+      - uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: x86
+
+      - name: Build 32-bit wheel
+        run: python -m cibuildwheel --output-dir dist
+        env:
+          CIBW_BUILD: cp27-win32
+          DISTUTILS_USE_SDK: 1
+          MSSdk: 1
 
       - uses: actions/upload-artifact@v3
         with:
