--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,10 +49,11 @@ jobs:
 
       - name: Run basic test 
         run: |
-          ls
+          ls /home/runner/work
+          ls /home/runner/work/dist
           cd misc/
           pwd
-          PIP_FIND_LINKS='/home/runner/work/up-fast-downward/up-fast-downward/dist' tox -e unified-planning
+          PIP_FIND_LINKS='/home/runner/work/dist' tox -e unified-planning
 
 #
 #  build-win-and-mac:
