set env variable for windows differently

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,10 +85,9 @@ jobs:
           name: mac-wheels
           path: dist/*.whl
   
-
   run-tox-test:
     name: Test wheels
-    needs: [build-linux, build-mac, build-windows]
+    needs: [build-linux, build-mac]
     runs-on: ${{ matrix.version.os }}
     strategy:
       matrix:
@@ -96,7 +95,6 @@ jobs:
           - {os: ubuntu-20.04, python: '3.8'}
           - {os: ubuntu-22.04, python: '3.10'}
           - {os: macOS-11, python: '3.10'}
-          - {os: windows-2022, python: '3.10'}
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
@@ -109,11 +107,6 @@ jobs:
       - uses: actions/download-artifact@master
         with:
           name: mac-wheels
-          path: dist
-
-      - uses: actions/download-artifact@master
-        with:
-          name: windows-wheels
           path: dist
 
       - name: Install Python
@@ -129,8 +122,35 @@ jobs:
         run: |
 
           cd misc/
-          #          PIP_FIND_LINKS='/home/runner/work/up-fast-downward/up-fast-downward/dist' tox -e unified-planning
-          PIP_FIND_LINKS='${GITHUB_WORKSPACE}/dist' tox -e unified-planning
+          PIP_FIND_LINKS='/home/runner/work/up-fast-downward/up-fast-downward/dist' tox -e unified-planning
+
+
+  run-tox-test-windows:
+    name: Test wheels
+    needs: [build-windows]
+    runs-on: windows-2022
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v3
+
+      - uses: actions/download-artifact@master
+        with:
+          name: windows-wheels
+          path: dist
+
+      - name: Install Python
+        uses: actions/setup-python@v4
+
+      - name: Install dependencies
+        run: |
+          pip3 install tox
+
+      - name: Run basic test 
+        run: |
+
+          cd misc/
+          echo '${GITHUB_WORKSPACE}'
+          $env:PIP_FIND_LINKS='${GITHUB_WORKSPACE}/dist'; tox -e unified-planning
 
 
 #  deploy-pypi:
