--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,8 @@ jobs:
 
       - name: Build wheel
         run: python -m cibuildwheel --output-dir dist
+        env:
+          CIBW_ARCHS_MACOS: "x86_64 arm64" 
 
       - uses: actions/upload-artifact@v3
         with:
